--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-PORT= 8000
+PORT= 8080
 MONGO_URI='mongodb://127.0.0.1:27017/toysWebsite'
 JWT_SECRET=abc12ahdfgbhgjh
 NODE_ENV= development
+PAYPAL_CLIENT_ID = 
