--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,15 @@
     "@paypal/react-paypal-js": "^8.5.0",
     "@reduxjs/toolkit": "^2.2.6",
     "apexcharts": "^3.50.0",
+    "cors": "^2.8.5",
     "flowbite": "^2.4.1",
+    "formidable": "^3.5.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-router": "^6.24.1",
     "react-router-dom": "^6.24.1",
     "react-slick": "^0.30.2",
